--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
       "@domains/*": ["./src/domains/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/widgets/footer/index.ts"],
   "exclude": ["node_modules"]
 }
