--- a/components.json
+++ b/components.json
@@ -11,9 +11,9 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@shared/components",
+    "components": "@shared/ui",
     "utils": "@/shared/lib/utils",
-    "ui": "@shared/components",
+    "ui": "@shared/ui",
     "lib": "@/shared/lib",
     "hooks": "@/shared/hooks"
   },
