--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
