--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "globals": "15.0.0",
     "immer": "^10.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.508.0",
     "neverthrow": "^8.2.0",
     "next": "15.3.2",
