--- a/components.json
+++ b/components.json
@@ -12,9 +12,9 @@
   },
   "aliases": {
     "components": "@shared/ui",
-    "utils": "@/shared/lib/utils",
+    "utils": "@shared/lib/utils",
     "ui": "@shared/ui",
-    "lib": "@/shared/lib",
+    "lib": "@shared/lib",
     "hooks": "@/shared/hooks"
   },
   "iconLibrary": "lucide"
